--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 
 <div class ="topnav">
-    <span class = "logo">A</span>
+    <span class = "logo">
+        <img class= "corporateOpportunities" src="boys.gif"></img>
+    </span>
     <a class="active" href="#home">Home</a>
     <a href="#panel">Panel</a>
     <a href="#status">Status</a>
@@ -22,10 +24,31 @@
 </head>
 
 <body>
+    <div class = "mainPanel">
+        <h1 class = "mD">SKETCHY PANEL</h1>
+        <a name = "panel"></a>
+        <p>Note: This is plaintext.</p>
+        <p>Do with that as you will.</p>
+        <div><p class = "secondary">Maybe not? You won't know.</p></div>
+        <p>Continue at your own <span color = "red">risk...</span></p>
+        <div class = "url">
+            <p><a href="/SSO-LOGIN" class = "URL">PANEL</a></p>
+        </div> 
+    </div>
+
     <div class = "mainText">
+        <a name = "home"></a>
         <h1 class = "mH">Hello, this is Cursed-Site Area 49!</h1>
-        <p class = "light">This is not a cookie header preferences popup, but it looks like one anyway! There are no cookies here.</p>
-        <p class = "light">Try adding your preferences when none of them exist. Easy.</p>
+        <p>This is not a cookie header preferences popup, but it looks like one anyway! There are no cookies here.</p>
+        <p>Try adding your preferences when none of them exist. Easy.</p>
+        <p>(OPERATIONAL COOKIES EXCLUDED)</p>
+    </div>
+
+    <div class = "status">
+        <a name = "status"></a>
+        <h1 class = "mH">OPERATIONAL STATUS</h1>
+        <p>If the panel doesn't work, then it doesn't work.</p>
+        <p>No, it wouldn't be containerized, why would it be here anyway?</p>
     </div>
 </body>
 </html>
