--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 <html lang="en">
 <link rel="stylesheet" href="style.css">
 
-
-<div class ="topnav">
-    <span class = "logo">
-        <img class= "corporateOpportunities" src="boys.gif"></img>
-    </span>
-    <a class="active" href="#home">Home</a>
-    <a href="#panel">Panel</a>
-    <a href="#status">Status</a>
-</div>
-
-
 <head>
     <link rel="icon" type="image/x-icon" href="/PngCat.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,9 +10,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursed-Site 49</title>
+    <script>
+        console.log("JS Init");
+
+        let activeElement = document.getElementById("activeElement");
+        function handler(element) {
+            if(document.getElementById("activeElement") != element && document.getElementById("activeElement")){
+                document.getElementById("activeElement").className = "tb";
+                document.getElementById("activeElement").removeAttribute("id")
+                element.className = "active";
+                element.id = "activeElement";
+            }
+        }
+        document.addEventListener("DOMContentLoaded", function(e) {
+            let elements = document.getElementById("topnav").getElementsByTagName("a")
+            for(let element of elements){
+                element.addEventListener("click", function(t){
+                    handler(element);
+                })
+            }
+        })
+        </script>
 </head>
 
+
+
 <body>
+    <div class ="topnav" id = "topnav">
+        <span class = "logo">
+            <img class= "corporateOpportunities" src="boys.gif"></img>
+        </span>
+        <a name = "home" style = "padding-left:45rem"></a>
+        <a class="active tb" id = "activeElement" href="#home">Home</a>
+        <a class = "tb" href="#panel">Panel</a>
+        <a class = "tb" href="#status">Status</a>
+    </div>
+
+    <div hidden class = "mainText">
+        <h1 class = "mH">Hello, this is Cursed-Site Area 49!</h1>
+        <p>This is not a cookie header preferences popup, but it looks like one anyway! There are no cookies here.</p>
+        <p>Try adding your preferences when none of them exist. Easy.</p>
+        <p>(OPERATIONAL COOKIES EXCLUDED)</p>
+    </div>
     <div class = "mainPanel">
         <h1 class = "mD">SKETCHY PANEL</h1>
         <a name = "panel"></a>
@@ -36,13 +64,6 @@
         </div> 
     </div>
 
-    <div class = "mainText">
-        <a name = "home"></a>
-        <h1 class = "mH">Hello, this is Cursed-Site Area 49!</h1>
-        <p>This is not a cookie header preferences popup, but it looks like one anyway! There are no cookies here.</p>
-        <p>Try adding your preferences when none of them exist. Easy.</p>
-        <p>(OPERATIONAL COOKIES EXCLUDED)</p>
-    </div>
 
     <div class = "status">
         <a name = "status"></a>
