--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <script>
         console.log("JS Init");
 
-        let activeElement = document.getElementById("activeElement");
         function handler(element) {
-            if(document.getElementById("activeElement") != element && document.getElementById("activeElement")){
-                document.getElementById("activeElement").className = "tb";
-                document.getElementById("activeElement").removeAttribute("id")
+            if(!activeElement){
+                throw new Error("Failed to find a navbar!");
+            }
+            if(activeElement != element){
+                activeElement.removeAttribute("id");
+                activeElement.classList.remove("active");
                 element.className = "active";
                 element.id = "activeElement";
+                activeElement = element;
             }
         }
         document.addEventListener("DOMContentLoaded", function(e) {
+            activeElement = document.getElementById("activeElement");
             let elements = document.getElementById("topnav").getElementsByTagName("a")
             for(let element of elements){
                 element.addEventListener("click", function(t){
@@ -41,9 +45,9 @@
             <img class= "corporateOpportunities" src="boys.gif"></img>
         </span>
         <a name = "home" style = "padding-left:45rem"></a>
-        <a class="active tb" id = "activeElement" href="#home">Home</a>
-        <a class = "tb" href="#panel">Panel</a>
-        <a class = "tb" href="#status">Status</a>
+        <a class = "active" id = "activeElement" href="#home">Home</a>
+        <a href = "#panel">Panel</a>
+        <a href = "#status">Status</a>
     </div>
 
     <div hidden class = "mainText">
